--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,12 @@
+
 services:
   - type: web
     name: memobotv4
-    env: python
+    runtime: python
+    plan: free
+    region: frankfurt
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn src.api:app --host 0.0.0.0 --port 10000
+    startCommand: uvicorn api:api --host 0.0.0.0 --port 10000
+    envVars:
+      - key: PYTHON_VERSION
+        value: "3.11"
